# rrdtool-1.x

./: .cvsignore  .gitignore  .indent.pro  .travis.yml  00README  CHANGES  CONTRIBUTORS  COPYRIGHT  MakeMakefile  Makefile.am  Makefile.in  Makefile.msc  NEWS  NT-BUILD-TIPS.txt  PROJECTS  README  README.md  THREADS  TODO  VERSION  WIN32-BUILD-TIPS.txt  acinclude.m4  autogen.sh  bootstrap  build-rrdtool.dot  centos-deps.sh  centos-prepbuild.sh  centos-setvars.sh  ci-build_MSYS2.sh  configure  configure.ac  configure.in  librrd-4.def  librrd-4.rc  librrd-4.vcxproj  rrd.sln  rrd_config.h  rrd_config.h.in  rrdcgi.rc  rrdtool-1.2-release  (+11 more)
bindings/: Makefile.am  Makefile.in
bindings/dotnet/: .gitignore  RrdException.cs  dnrrd_binding_test.csproj  dnrrdlib.csproj  rrd_binding_test.cs  rrdlib.cs  rrdlib.sln
bindings/lua/: .gitignore  Makefile.am  Makefile.in  Makefile.lua  Makefile.lua.in  README  rrdlua.c  test.lua  test.lua.bottom  test.lua50.bottom
bindings/perl-piped/: .cvsignore  .gitignore  Makefile.PL  README  RRDp.pm  leaktest.pl
bindings/perl-shared/: .cvsignore  .gitignore  MANIFEST  Makefile.PL  README  RRDs.pm  RRDs.ppd  RRDs.xs  ntmake-build  ntmake.pl
bindings/python/: .gitignore  Makefile.am  Makefile.in  README  README.md  Setup.in  rrd_extra.h  rrd_format.h  rrdtoolmodule.c  setup.py
bindings/ruby/: .gitignore  CHANGES  extconf.rb  main.c  test.rb
bindings/tcl/: .gitignore  Makefile.am  Makefile.in  ifOctets.tcl  ifOctets.tcl.in  tclrrd.c
doc/: .cvsignore  Makefile.am  Makefile.in  PDP_calculation_explanation.pod  RRDp.pod  RRDs.pod  bin_dec_hex.pod  cdeftutorial.pod  librrd.pod  name.inc  rpntutorial.pod  rrd-beginners.pod  rrd_pdpcalc.pod  rrdbuild.pod  rrdcached.pod  rrdcgi.pod  rrdcreate.pod  rrddump.pod  rrdfetch.pod  rrdfirst.pod  rrdflush.pod  rrdflushcached.pod  rrdgraph-old.pod  rrdgraph.pod  rrdgraph.src  rrdgraph_data.pod  rrdgraph_data.src  rrdgraph_examples.pod  rrdgraph_examples.src  rrdgraph_graph.pod  rrdgraph_graph.src  rrdgraph_libdbi.pod  rrdgraph_rpn.pod  rrdgraph_rpn.src  rrdinfo.pod  rrdlast.pod  rrdlastupdate.pod  rrdlist.pod  rrdlua.pod  rrdmodify.pod  (+15 more)
examples/rrdcached/: Makefile.am  Makefile.in
libraries/afm/: COPYRIGHT.txt  Makefile.am  compile_afm.pl  test-afm.c
libraries/freetype-2.0.5/: Makefile.am  ahglyph.c  ahmodule.c  cffload.c  cffobjs.c  cidgload.c  cidobjs.c  freetype.dsp  freetype.vcproj  ftbase.c  ftcchunk.c  ftcglyph.c  ftcsbits.c  ftgrays.c  ftlru.c  ftobjs.c  ftoutln.c  ftraster.c  ftsmooth.c  pcfdriver.c  psobjs.c  sfobjs.c  t1decode.c  t1driver.c  t1gload.c  t1load.c  ttload.c
libraries/libpng-1.0.9/: Makefile.am  README.rrdtool
libraries/zlib-1.1.3/: Makefile.am  README.rrdtool  zconf.h  zlib.dsp
program/: CONTRIBUTORS  MakeMakefile  Makefile.am  NEWS  NT-BUILD-TIPS.txt  PROJECTS  README  THREADS  TODO  acinclude.m4  config.status  configure.ac  configure.in  libtool  rrdtool.spec
program/bindings/: Makefile.am
program/config/: .cvsignore  Makefile.am  acconfig.h
program/confignt/: config.h
program/debian/: build_freetype.sh  control  copyright  librrd0-dev.files  librrd0.files  librrds-perl.files  rrdtool-tcl.files  rules  watch
program/doc/: .cvsignore  Makefile.am  bin_dec_hex.pod  cdeftutorial.pod  name.inc  rrd-beginners.pod  rrdcgi.pod  rrdcreate.pod  rrddump.pod  rrdfetch.pod  rrdgraph-old.pod  rrdgraph.pod  rrdgraph.src  rrdgraph_data.pod  rrdgraph_data.src  rrdgraph_examples.pod  rrdgraph_graph.src  rrdgraph_rpn.pod  rrdgraph_rpn.src  rrdinfo.pod  rrdlast.pod  rrdresize.pod  rrdrestore.pod  rrdthreads.pod  rrdtool.pod  rrdtune.pod  rrdtutorial.pod  rrdupdate.pod  see_also.inc
program/examples/: 4charts.pl.in  Makefile.am  bigtops.pl  bigtops.pl.in  cgi-demo.cgi  cgi-demo.cgi.in  minmax.pl  minmax.pl.in  piped-demo.pl  piped-demo.pl.in  shared-demo.pl  shared-demo.pl.in  stripes.pl.in
program/libraries/: Makefile.am
program/src/: Makefile.am  gdpng.c  gifsize.c  ntconfig.h  parsetime.c  pngsize.c  rd_cgi.dsp  rrd.h  rrd.vcproj  rrd_afm.c  rrd_afm.h  rrd_cgi.c  rrd_cgi.vcproj  rrd_create.c  rrd_datalang.c  rrd_diff.c  rrd_dump.c  rrd_error.c  rrd_fetch.c  rrd_format.c  rrd_format.h  rrd_gfx.c  rrd_gfx.h  rrd_graph.c  rrd_graph.h  rrd_graph_helper.c  rrd_graph_helper.h  rrd_hw.c  rrd_info.c  rrd_last.c  rrd_nan_inf.c  rrd_not_thread_safe.c  rrd_open.c  rrd_resize.c  rrd_restore.c  rrd_rpncalc.c  rrd_rpncalc.h  rrd_stat.c  rrd_thread_safe.c  rrd_tool.c  (+8 more)
src/: .gitignore  .indent.pro  Makefile  Makefile.NetWare  Makefile.Win32  Makefile.am  Makefile.in  art_rgba_rgba_affine.c  art_rgba_rgba_affine.h  art_rgba_svp.c  art_rgba_svp.h  compat-cloexec.c  compat-cloexec.h  compile_afm.pl  fnv.h  gdpng.c  get_ver.awk  getopt.c  getopt1.c  gettext.h  gifsize.c  hash_32.c  librrd.sym  librrd.sym.in  librrd.sym.in.in  memtest.c  mkstemp.c  mkstemp.h  mutex.c  mutex.h  optparse.c  optparse.h  parsetime.c  plbasename.c  plbasename.h  pngsize.c  quicksort.c  quicksort.h  rrd.dsp  rrd.dsw  (+84 more)
tests/: .gitignore  Makefile.am  Makefile.in  alltests  create-from-template-1  create-no-overwrite  create-with-source-1  create-with-source-2  create-with-source-3  create-with-source-4  create-with-source-5  create-with-source-and-mapping-1  dcounter1  dcounter1.output  dump-restore  functions  graph1  graph1.output  graph2  graph2.output  list1  modify-test1.create.dump  modify-test1.mod1.dump  modify-test3.create.dump  modify-test3.mod1.dump  modify1  modify2  modify2-testa-create.dump  modify2-testb-mod1.dump  modify2-testc-mod1.dump  modify3  modify4  modify4-testa-create.dump  modify4-testa1-create.dump  modify4-testa2-create.dump  modify5  modify5-testa1-create.dump  modify5-testa2-create.dump  pdp-calc1  pdp-calc1-1-avg-300.output  (+20 more)
tests/cached/: dcounter1.output  graph1.output  graph2.output  modify-test1.create.dump  modify-test1.mod1.dump  modify-test3.create.dump  modify-test3.mod1.dump  modify2-testa-create.dump  modify2-testb-mod1.dump  modify2-testc-mod1.dump  modify4-testa-create.dump  modify4-testa1-create.dump  modify4-testa2-create.dump  modify5-testa1-create.dump  rpn1.output  rpn2.output  (+12 more)
(+275 files in other folders)
